# CarrotPNG

./: .gitignore  CMakeLists.txt  CarrotPNG.h  LICENSE  README.md
include/cpng/: CarrotPNG.h
include/cpng/internal/: chunk_parser.h  crc32.h  defilter.h  huffman.h  inflate.h  types.h
src/: CarrotPNG.cpp
src/internal/: bit_reader.h  chunk_parser.h  crc32.h  defilter.h  fixed_tables.h  huffman.h  inflate.h
test/: CMakeLists.txt  main.cpp
